<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AndroidAppWN</string>
    <string name="action_settings">Settings</string>
    <string name="choose_city_text_view">עיר</string>
    <string name="choose_bus_text_view">בית עסק</string>
    <string name="title_activity_main_activity2">MainActivity2</string>
    <string name="choose_branch_text_view">סניף</string>
    <string name="title_activity_main_activity3">MainActivity3</string>
    <string name="hello_world">Hello world!</string>
    <string name="choose_business_send_button">שלח</string>
    <string name="title_activity_main_activity4">MainActivity4</string>
    <string name="title_activity_logo">Logo</string>
    <string name="logo_pic">logo</string>
    <string name="spinnerText">Choose One </string>
    <string name="textOnChooseBusinessButton">בחר בית עסק</string>
    <string name="textOnScanQRButton">סרוק ברקוד ממסך השירות</string>
    <string name="loadingQueue">טוען...</string>
    <string name="currentQueueText">מספר התור הבא : </string>
    <string name="waitingClientsText"> מספר האנשים בתור : </string>
    <string name="estimatedTimeText">במידה ותקח תור עכשיו, הזמן המשוער לקבלת התור יהיה : </string>
    <string name="businessNameText">שם העסק</string>
    <string name="getLineButtonText">קבל תור</string>
    <string name="title_activity_alarm_main">AlarmMainActivity</string>
    <string name="businessOpening">שעות פתיחה</string>
    <string name="nextInLineTV">מספר התור הבא : </string>


</resources>
