<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context="com.example.zaken.androidappwn.MainActivity4"
    android:background="@drawable/withegray">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/linearLayout2"
        android:weightSum="1">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/linearLayout3"
            android:weightSum="1"
            android:layout_weight="0.25"
            android:paddingTop="20dp">

            <Spinner
                android:id="@+id/city_type_spinner"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:text="@string/choose_city_text_view"
                android:id="@+id/chooseCityTextView"
                android:gravity="right"
                android:paddingRight="20dp" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.25">

            <Spinner
                android:id="@+id/business_type_spinner"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/choose_bus_text_view"
                android:id="@+id/chooseBusinessTextView"
                android:textSize="30dp"
                android:layout_weight="1"
                android:paddingRight="20dp" />

            </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.25">

            <Spinner
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:id="@+id/branch_type_spinner"
                android:paddingLeft="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/choose_branch_text_view"
                android:id="@+id/chooseBranchTextView"
                android:textSize="30sp"
                android:layout_weight="1"
                android:paddingRight="20dp" />

            </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_weight="0.25"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingBottom="16dp">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="69dp"
                android:layout_centerHorizontal="true"
                android:layout_gravity="bottom">
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/choose_business_send_button"
                    android:id="@+id/chooseBusinessSendButton"
                    android:onClick="send_business"
                    android:textStyle="bold|italic"
                    android:textSize="30dp"
                    android:background="@drawable/blue_buttons"
                    android:textColor="#fffcfffd" />
            </LinearLayout>


        </LinearLayout>

    </LinearLayout>




</RelativeLayout>