<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.zaken.androidappwn.InfoBeforeGettingLineMainActivity"
    android:background="@drawable/withegray">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/linearLayout2"
        android:weightSum="1">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="51dp"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/businessNameText"
                android:id="@+id/businessNameTV"
                android:layout_gravity="center_horizontal"
                android:textStyle="bold|italic"
                android:gravity="center_horizontal" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.08">

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="#ff0066ff"
                android:layout_alignTop="@+id/estimate_time"
                android:id="@+id/sl1" />
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.08">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/loadingQueue"
                android:id="@+id/currentQueueDisplayTV"
                android:layout_weight="1"
                android:gravity="left"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/currentQueueText"
                android:id="@+id/textView3"
                android:layout_weight="1"
                android:gravity="right"
                android:textSize="20dp" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.08">
            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="#ff0066ff"
                android:layout_alignTop="@+id/estimate_time"
                android:id="@+id/sp3" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.08">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/loadingQueue"
                android:id="@+id/waitingClientsDisplayTV"
                android:layout_weight="1"
                android:gravity="left"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/waitingClientsText"
                android:id="@+id/rr"
                android:layout_weight="1"
                android:gravity="right"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.06">
            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="#ff0066ff"
                android:layout_alignTop="@+id/estimate_time"
                android:id="@+id/sp11" />
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.05">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/loadingQueue"
                android:id="@+id/timeTextView"
                android:layout_weight="1"
                android:gravity="left"
                android:textSize="20sp" />

            <TextView
                android:layout_width="226dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/estimatedTimeText"
                android:id="@+id/rrrr"
                android:gravity="right"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.23">
            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="#ff0066ff"
                android:layout_alignTop="@+id/estimate_time"
                android:id="@+id/sp11111" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1"
            android:measureWithLargestChild="false"
            android:baselineAligned="false"
            android:layout_weight="0.4">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.40"
                android:layout_marginBottom="2dp">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="בחר בית עסק חדש"
                    android:id="@+id/button5"
                    android:textStyle="bold|italic"
                    android:textSize="20dp"
                    android:layout_weight="0.5"
                    android:onClick="testForInLine"
                    android:background="@drawable/green_buttons"
                    android:textColor="@android:color/white"
                    android:layout_marginRight="2dp" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="fill_parent"
                    android:text="@string/businessOpening"
                    android:id="@+id/button7"
                    android:layout_weight="0.5"
                    android:textStyle="bold|italic"
                    android:textSize="20dp"
                    android:background="@drawable/green_buttons"
                    android:textColor="@android:color/white"
                    android:layout_marginLeft="2dp"
                    android:onClick="openingHoursOnClick" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.40"
                android:layout_marginTop="1dp">

                <Button

                    android:layout_width="match_parent"
                    android:layout_height="fill_parent"
                    android:text="@string/getLineButtonText"
                    android:id="@+id/getLineButton"
                    android:layout_weight="0.5"
                    android:textStyle="bold|italic"
                    android:textSize="30dp"
                    android:onClick="getQueueButtonClick"
                    android:background="@drawable/blue_buttons"
                    android:textColor="@android:color/white" />

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>


</RelativeLayout>
